<?xml version="1.0"?>
<package format="2">
  <name>mrc_hw3</name>
  <version>0.1.0</version>
  <description>The mrc_hw3 package</description>

  <maintainer email="jfmalia@nps.edu">LT Josh Malia</maintainer>
  <license>BSD</license>
  <author email="jfmalia@nps.edu">Josh Malia</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>std_msgs</exec_depend>

</package>
